--- a/VUE/01-vuecli3/06-高阶函数.md
+++ b/VUE/01-vuecli3/06-高阶函数.md
@@ -1,11 +1,11 @@
-# 1、filter 函数的使用
+### 1、filter 函数的使用
 * filter 中的回调函数有一个要求：必须返回一个boolean值
 * true:当返回true时，函数内部会自动将这次回调的n加入到新的数组中
 * false:当返回false时，函数内部会过滤掉这次的n
 
-# 2、map 函数的使用
+### 2、map 函数的使用
 
-# 3、reduce 函数的使用
+### 3、reduce 函数的使用
 * reduce 作用对数组中所有的内容进行汇总
 ```
 需求：
@@ -36,7 +36,7 @@ let newNums = nums.filter(function(n) {
 let newNums = nums.filter(n=> n<100).map(n=> n*2).reduce((n,m)=> n+m)
 ```
 
-# 4、其他函数
+### 4、其他函数
 
 * 1、push 数组中最后添加元素 可添加多个元素
 * 2、pop 删除数组中的最后一个元素
